# Healthcare-management-system

./: CMakeLists.txt
data/: Appointments.txt  Doctors.txt  LinkedListAppointments.txt  LinkedListDoctors.txt  PrimaryIndexAppointments.txt  PrimaryIndexDoctors.txt  SecondaryIndexAppointments.txt  SecondaryIndexDoctors.txt
docs/: ReadMe.txt
src/: HealthcareSystem.cpp  HealthcareSystem.h  linked_list.cpp  main.cpp  primary_index.cpp  secondary_index.cpp  utils.cpp  utils.h
src/data/: linked_list.cpp  primary_index.cpp  secondary_index.cpp
tests/: JosephIndextest.cpp  results.txt  test_cases.txt
